--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                             <div class="card-body">
                                 <pre>
 此处输入数据，应该是每行一条记录，第一个值为发现物名称，第二个是坐标
-中间用tab分割(excel直接复制两列即可)，如果是手动输入，可以用中/英文逗号或者空格分割
-对于需要两步触发的，第二步留空第一个值
+中间用tab分隔(excel直接复制两列即可)，如果是手动输入，可以用中/英文逗号或者空格分隔
+对于需要两步触发的，第二步留空第一个值,保留分隔符
 以那不勒斯驿站为例：
 
 古罗马竞技场	上6
