--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>风帆纪元计算工具</title>
+    <title>Jupyterlab</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
     <div class="container">
         <div class="row">
+            <!-- 导航 -->
             <div class="col-md-3">
                 <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                     <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">投资计算器</a>
@@ -19,10 +20,12 @@
                 <div class="tab-content" id="v-pills-tabContent">
                     <!-- 投资计算器 -->
                     <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
-                        <h1 class="mb-4">投资计算器</h1>
+                        <!-- <h1 class="mb-4">投资计算器</h1> -->
                         <div class="card mb-4">
+                            <div class="card-header">
+                                输入参数
+                            </div>
                             <div class="card-body">
-                                <h5 class="card-title">输入参数</h5>
                                 <!-- 当前 -->
                                 <div class="mb-3">
                                     <label class="form-label"><strong>当前</strong></label>
@@ -59,12 +62,28 @@
                                         </div>
                                     </div>
                                 </div>
+                                <!-- 额外加成 -->
+                                <div class="form-group mb-3">
+                                    <label for="checkboxes"><strong>额外加成</strong></label>
+                                    <div id="checkboxes" class="row p-5">
+                                        <div class="col-6">
+                                            <input type="checkbox" id="hasReward" class="form-check-input">
+                                            <label for="hasReward" class="form-check-label">兑换投资奖励</label>
+                                        </div>
+                                        <div class="col-6">
+                                            <input type="checkbox" id="hasSp" class="form-check-input">
+                                            <label for="hasSp" class="form-check-label">菲奥娜特性</label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- 投资策略 -->
                                 <div class="mb-4">
                                     <label for="investmentStrategy" class="form-label">投资策略</label>
                                     <select class="form-select mr-4" id="investmentStrategy">
                                         <option value="minimumInvestment" selected>最低投资</option>
                                         <option value="rapidGrowth">极速增长</option>
                                     </select>
+                                    
                                     <button id="calculateButton" class="btn btn-primary mt-3">点击计算</button>
                                 </div>
                             </div>
@@ -115,34 +134,7 @@
                      </div>
                     <!-- 陆地探险 -->
                     <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
-                        <h2>陆地探险</h2>
-                        <div class="card mb-4">
-                            <div class="card-body">
-                                <pre>
-此处输入数据，应该是每行一条记录，第一个值为发现物名称，第二个是坐标
-中间用tab分隔(excel直接复制两列即可)，如果是手动输入，可以用中/英文逗号或者空格分隔
-对于需要两步触发的，第二步留空第一个值,保留分隔符
-以那不勒斯驿站为例：
-
-古罗马竞技场	上6
-路易斯西洋棋	上2右上9
-庞贝	右上1右下2
-    右上2右下5
-明矾	右下4
-                                </pre>
-                                <textarea id="nodeInput" class="form-control" rows="4" ></textarea>
-                                <button id="calculatePath" class="btn btn-primary mt-3">计算最短路径</button>
-                            </div>
-                        </div>
-                        <div>
-                            <div class="card mb-4">
-                                <div class="card-body">
-                                    <h5 class="card-title">输出结果</h5>
-                                    <div id="pathOutput" class="mt-3"></div>
-                                </div>
-                            </div>
-                        </div>
-                        
+                        <iframe id="expedition-frame" style="width:100%; height:1000px;" frameborder="0"></iframe>
                     </div>
                 </div>
             </div>
@@ -158,29 +150,32 @@
 
 <!-- 投资计算器 -->
 <script>
+    let ext_plus = 0;
+    let ext_mult = 1;
     const investments = [
         { cost: 20000, inc: 5, threshold: 150000 },
         { cost: 15000, inc: 2, threshold: 60000 },
         { cost: 10000, inc: 1, threshold: 0 },
     ];
-    function invesResult(inv) {
+    function invesResult(inv, divisor) {
         let inc = 0;
         let months = 0;
         investments.forEach(investment => {
             let threshold = investment.threshold;
             if (inv > threshold) {
-                let cost = investment.cost;
-                let t = threshold > 0 ? Math.ceil((inv - threshold) / cost) : Math.floor((inv - threshold) / cost);
-                let cosThis = t * cost;
-                let incThis = t * investment.inc;
-                months += t;
+                let costPermonth = investment.cost * ext_mult;
+                let incPerMonth = investment.inc * divisor * ext_mult + ext_plus;
+                let monThis = threshold > 0 ? Math.ceil((inv - threshold) / costPermonth) : Math.floor((inv - threshold) / costPermonth);
+                let cosThis = monThis * costPermonth;
+                let incThis = monThis * incPerMonth;
+                months += monThis;
                 inv -= cosThis;
                 inc += incThis;
             }
         });
         return { months, inc, inv };
     }
-    function calculateMinInvestment(currentValue, targetValue) {
+    function calculateMinInvestment(currentValue, targetValue, divisor) {
         let minInvestment = 0;
         let diff = targetValue - currentValue;
         let inc = 0;
@@ -190,23 +185,25 @@
                 minInvestment = 9999
             }
             minInvestment += 1;
-            let result = invesResult(minInvestment);
+            let result = invesResult(minInvestment, divisor);
             inc = result.inc;
             months = result.months;  // 更新months的值
         }
-        // console.log(minInvestment, months)
         return { minInvestment, months };  // 返回minInvestment和months
     }
     function calculateRapidGrowth(currentTrade, currentPopulation, currentTechnology, targetTrade, targetPopulation, targetTechnology) {
+        let cost = 20000 * ext_mult;
+        let inc_trade_tech = 50 * ext_mult + ext_plus;
+        let inc_pop = 2500 * ext_mult + ext_plus;
         // 计算成长时间
-        var tradeGrowthTime = Math.ceil((targetTrade - currentTrade) / 50);
-        var populationGrowthTime = Math.ceil((targetPopulation - currentPopulation) / 2500);
-        var technologyGrowthTime = Math.ceil((targetTechnology - currentTechnology) / 50);
+        var tradeGrowthTime = Math.ceil((targetTrade - currentTrade) / inc_trade_tech);
+        var populationGrowthTime = Math.ceil((targetPopulation - currentPopulation) / inc_pop);
+        var technologyGrowthTime = Math.ceil((targetTechnology - currentTechnology) / inc_trade_tech);
 
         // 计算投资额
-        var tradeInvestment = tradeGrowthTime * 20000 + 130001;
-        var populationInvestment = populationGrowthTime * 20000 + 130001;
-        var technologyInvestment = technologyGrowthTime * 20000 + 130001;
+        var tradeInvestment = tradeGrowthTime * cost + 150001 - cost;
+        var populationInvestment = populationGrowthTime * cost + 150001 - cost;
+        var technologyInvestment = technologyGrowthTime * cost + 150001 - cost;
 
         return {
             tradeGrowthTime,
@@ -222,9 +219,9 @@
             "技术贸易": 10,
             "人口": 500
         };
-        let tradeResult = calculateMinInvestment(currentTrade / divisors["技术贸易"], targetTrade / divisors["技术贸易"]);
-        let populationResult = calculateMinInvestment(currentPopulation / divisors["人口"], targetPopulation / divisors["人口"]);
-        let technologyResult = calculateMinInvestment(currentTechnology / divisors["技术贸易"], targetTechnology / divisors["技术贸易"]);
+        let tradeResult = calculateMinInvestment(currentTrade, targetTrade , divisors["技术贸易"]);
+        let populationResult = calculateMinInvestment(currentPopulation, targetPopulation, divisors["人口"]);
+        let technologyResult = calculateMinInvestment(currentTechnology , targetTechnology, divisors["技术贸易"]);
         return {
             tradeInvestment: tradeResult.minInvestment,
             tradeGrowthTime: tradeResult.months,
@@ -235,6 +232,18 @@
         };
     }
     document.getElementById("calculateButton").addEventListener("click", function() {
+        // 奖励/特性加成
+        if (document.getElementById('hasReward').checked) {
+            ext_plus = 20;
+        } else{
+            ext_plus = 0;
+        }
+        if (document.getElementById('hasSp').checked) {
+            ext_mult = 1.5;
+        } else{
+            ext_mult = 1;
+        }
+
         // 获取输入值
         var currentTrade = parseInt(document.getElementById("currentTrade").value);
         var currentPopulation = parseInt(document.getElementById("currentPopulation").value);
@@ -267,240 +276,13 @@
 </script>
 <!-- 陆地探险 -->
 <script>
-    class Node {
-        constructor(path, name = null, extensions = null) {
-            this.path = path;
-            this.name = name || path;
-            const { q, r } = Node.polarToAbsolute(path);
-            this.q = q;
-            this.r = r;
-            this.extensions = extensions || [];
-        }
-
-        static polarToAbsolute(path) {
-            const directions = {
-                "上": [0, -1],
-                "下": [0, 1],
-                "左上": [-1, 0],
-                "右下": [1, 0],
-                "左下": [-1, 1],
-                "右上": [1, -1],
-            };
-            const pattern = /(上|下|左上|右下|左下|右上)(\d+)/g;
-            let match;
-            let q = 0, r = 0;
-            while ((match = pattern.exec(path)) !== null) {
-                const direction = match[1]; // 第一个捕获的分组
-                const steps = match[2]; // 第二个捕获的分组
-                const [dq, dr] = directions[direction];
-                q += dq * parseInt(steps, 10);
-                r += dr * parseInt(steps, 10);
-            }
-            return { q, r };
-        }
-
-        static sign(x) {
-            return x > 0 ? 1 : x < 0 ? -1 : 0;
-        }
-
-        static absoluteToPolar(q, r) {
-    const dirSign = {
-            "上下": {"1": "下", "-1": "上"},
-            "左上右下": {"1": "右下", "-1": "左上"},
-            "左下右上": {"1": "右上", "-1": "左下"}
-        };
-        let path = [];
-        const signQ = Node.sign(q);
-        const signR = Node.sign(r);
-        const absQ = Math.abs(q);
-        const absR = Math.abs(r);
-
-        if (signR * signQ > 0) {
-            path = [`${dirSign['上下'][signQ.toString()]}${absR}`, `${dirSign['左上右下'][signQ.toString()]}${absQ}`];
-        } else if (q === 0 && r === 0) {
-            return '';
-        } else if (q === 0) {
-            path = [`${dirSign['上下'][signR.toString()]}${absR}`];
-        } else if (r === 0) {
-            path = [`${dirSign['左上右下'][signQ.toString()]}${absQ}`];
-        } else if (q * r < 0) {
-            const absMin = Math.min(absQ, absR);
-            path = [`${dirSign['左下右上'][signQ.toString()]}${absMin}`];
-            const path2 = Node.absoluteToPolar(signQ * (absQ - absMin), signQ * (-absR + absMin));
-            path.push(path2);
-        }
-        return path.join('');
-    }
-
-        getAbsoluteCoordinates() {
-            return { q: this.q, r: this.r };
-        }
-
-        getPolarCoordinates() {
-            return Node.absoluteToPolar(this.q, this.r);
-        }
-
-        stepCount() {
-            return Node.polarStepCount(this.path);
-        }
-
-        static polarStepCount(path) {
-            const pattern = /(上|下|左上|右下|左下|右上)(\d+)/g;
-            let match;
-            let c = 0;
-            while ((match = pattern.exec(path)) !== null) {
-                c += parseInt(match[2], 10);
-            }
-            return c;
-        }
-
-        pathTo(otherNode) {
-            const qDiff = otherNode.q - this.q;
-            const rDiff = otherNode.r - this.r;
-            const pathStr = Node.absoluteToPolar(qDiff, rDiff);
-            return { steps: Node.polarStepCount(pathStr), path: pathStr };
-        }
-
-        formatName() {
-            return `${this.name}(${this.path})`;
-        }
-    }
-
-    function generateNodesByList(str) {
-        const nodes = [];
-        const lines = str.trim().split('\n');
-
-        for (let i = 0; i < lines.length; i++) {
-            // 使用正则表达式替换所有分隔符为单个空格
-            const sanitizedLine = lines[i].replace(/[\t,， ]+/g, ' ');
-            const [name, coor] = sanitizedLine.split(' ').map(s => s.trim());
-
-            if (name !== '') {
-                nodes.push(new Node(coor, name));
-            } else {
-                const lastIndex = nodes.length - 1;
-                nodes[lastIndex].extensions.push(new Node(coor, `${nodes[lastIndex].name}-第二步`));
-            }
-        }
-        return nodes;
-    }
-
-    function generatePermutations(nodes) {
-        // 获取所有节点（包括主节点和扩展节点）
-        const allNodes = nodes.concat(nodes.flatMap(node => node.extensions));
-
-        // 生成所有节点的排列
-        const allPermutations = permute(allNodes);
-
-        // 过滤掉不符合条件的排列
-        return allPermutations.filter(isValidPermutation);
-    }
-
-    function isValidPermutation(perm) {
-        const visited = new Set();
-        for (let node of perm) {
-            if (visited.has(node)) {
-                continue;  // 跳过已访问的节点
-            }
-            if (node.extensions && node.extensions.some(ext => visited.has(ext))) {
-                return false;  // 如果是主节点，检查其扩展节点是否在之前出现
-            }
-            visited.add(node);
-        }
-        return true;
-    }
-
-    function findShortestTspPath(nodes, endPoint = null) {
-        const origin = new Node("", "城镇");
-        if (!endPoint) {
-            endPoint = origin;
-        }
-
-        // 生成所有可能的节点排列
-        const permutations = generatePermutations(nodes);
-
-        // 初始化最短路径和最小步长
-        let shortestPath = null;
-        let minSteps = Infinity;
-
-        // 遍历每个排列
-        for (let perm of permutations) {
-            let currentSteps = 0;
-            let currentPath = [];
-
-            // 从原点到第一个点
-            let { steps, path } = origin.pathTo(perm[0]);
-            currentSteps += steps;
-            currentPath.push([origin.formatName(), perm[0].formatName(), path, steps]);
-
-            // 遍历排列中的点
-            for (let i = 0; i < perm.length - 1; i++) {
-                ({ steps, path } = perm[i].pathTo(perm[i + 1]));
-                currentSteps += steps;
-                currentPath.push([perm[i].formatName(), perm[i + 1].formatName(), path, steps]);
-            }
-
-            // 从最后一个点回到原点
-            ({steps, path} = perm[perm.length - 1].pathTo(endPoint));
-            currentSteps += steps;
-            currentPath.push([perm[perm.length - 1].formatName(), endPoint.formatName(), path, steps]);
-
-            // 检查是否为最短路径
-            if (currentSteps < minSteps) {
-                minSteps = currentSteps;
-                shortestPath = currentPath;
-            }
-        }
-
-        return [shortestPath, minSteps];
-    }
-
-    // 生成所有排列的辅助函数
-    function permute(arr) {
-        if (arr.length === 0) return [[]];
-        const first = arr[0], rest = arr.slice(1);
-        const withoutFirst = permute(rest);
-        let allPermutations = [];
-
-        withoutFirst.forEach(perm => {
-            for (let i = 0; i <= perm.length; i++) {
-                const permWithFirst = [...perm.slice(0, i), first, ...perm.slice(i)];
-                allPermutations.push(permWithFirst);
-            }
+    document.addEventListener('DOMContentLoaded', function() {
+        // 为对应的标签添加点击事件监听器
+        document.getElementById("v-pills-profile-tab").addEventListener("click", function() {
+            // 加载 expedition.html 的内容
+            document.getElementById("expedition-frame").src = "expedition.html";
         });
-        return allPermutations;
-    }
-    document.getElementById("calculatePath").addEventListener("click", function() {
-        const input = document.getElementById("nodeInput").value;
-        const nodes = generateNodesByList(input);
-        const [shortestPath, minSteps] = findShortestTspPath(nodes);
-
-        let output = `总步长 ${minSteps}<br><br>`;
-        let totalStep = 0;
-        shortestPath.forEach(move => {
-            totalStep += move[3];
-            output += `${move[2]}, 步长: ${move[3]} ，详情: 【${move[0]}】 -> 【${move[1]}】， 累计步长${totalStep}<br>`;
-        });
-        document.getElementById("pathOutput").innerHTML = output;
     });
-    // // 示例字符串
-    // const s = `
-    // 琉球遗迹\t上5右上5
-    // 铅矿脉\t右上3右下1
-    // `;
-
-    // // // 生成节点并计算最短路径
-    // const nodes = generateNodesByList(s);
-    // // console.log(perms)
-    // const [shortestPath, minSteps] = findShortestTspPath(nodes);
-
-    // 输出结果
-    // console.log(`最短路径(总步长 ${minSteps}):`);
-    // let totalStep = 0;
-    // shortestPath.forEach(move => {
-    //     totalStep += move[3];
-    //     console.log(`${move[2]}, 步长: ${move[3]} ，详情: 【${move[0]}】 -> 【${move[1]}】， 累计步长${totalStep}`);
-    // });
 </script>
 </body>
 </html>
