--- a/expedition.html
+++ b/expedition.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>w</title>
+    <title>风帆纪元-陆地探险</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/danfojs@1.1.2/lib/bundle.min.js"></script>
 </head>
 <body>
     <div class="container">
-        <!-- <h1 class="mb-4">陆地探险</h1> -->
+        <h1 class="mb-4">陆地探险</h1>
         <!-- 输入参数 -->
         <div class="card mb-4">
             <div class="card-header">
