--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jupyterlab</title>
+    <title>风帆纪元计算器</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
                 <div class="tab-content" id="v-pills-tabContent">
                     <!-- 投资计算器 -->
                     <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
-                        <!-- <h1 class="mb-4">投资计算器</h1> -->
+                        <h1 class="mb-4">投资计算器</h1>
                         <div class="card mb-4">
                             <div class="card-header">
                                 输入参数
