--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Table</title>
+    <title>风帆纪元小工具</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
@@ -49,7 +49,6 @@
                     e.preventDefault(); // 阻止默认的链接跳转
                     const page = this.getAttribute('data-page'); // 获取链接指向的页面
                     document.getElementById('contentFrame').src = page; // 更新 iframe 的 src 属性
-    
                     // 更新导航链接的激活状态
                     document.querySelectorAll('.nav-link').forEach(navLink => {
                         navLink.classList.remove('active');
