--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                                 商会贸易线路
                             </a>
                         </li>
+                        <li>
+                            <a href="character.html" class="nav-link" target="_blank" data-external="true">
+                                人物属性
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
